Fixed bug with profile list height being too small

--- a/src/app/containers/Preferences/index.styl
+++ b/src/app/containers/Preferences/index.styl
@@ -93,9 +93,6 @@
 .preferencesOptions {
   width: 80%;
   background: #d1d5db;
-  div:last-child {
-    height: 94%;
-    }
 }
 
 .hidden {
